# ecal-camera-tools

./: CMakeLists.txt  README.md
.github/workflows/: build-ubuntu-18.yml  build-ubuntu-20.yml  build-ubuntu-22.yml  build-ubuntu.yml  build-windows.yml  build_ubuntu_22.yml
camera_receiver/: CMakeLists.txt
camera_receiver/proto_messages/: compressed_image.proto
camera_receiver/src/: plugin.h  plugin_widget.cpp
camera_receiver_mon_plugin/: CMakeLists.txt
camera_receiver_mon_plugin/src/: plugin.cpp  plugin.h  plugin_widget.cpp  plugin_widget.h
camera_snd/: CMakeLists.txt  camera_wrapper.cpp  camera_wrapper.h  camera_wrapper_with_fps_control.cpp  camera_wrapper_with_fps_control.h  main.cpp
cmake/: mon_functions.cmake
cmake_utils/: mon_functions.cmake
cmake_utils/qt/: qt_msvc_path.cmake  qt_windeployqt.cmake
ecal_camera_snd/: CMakeLists.txt  camera_wrapper.cpp  camera_wrapper.h  main.cpp
proto_messages/: compressed_image.proto
